<resources>
    <string name="app_name">Movie</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="movie_memoir">Movie Memoir</string>
    <string name="welcome_to_login_in">Welcome to Login in!</string>
    <string name="password">Password</string>
    <string name="email">Email:</string>
    <string name="first_name">First name:</string>
    <string name="surname">Surname:</string>
    <string name="dob">DoB:</string>
    <string name="address">Address:</string>
    <string name="postcode">PostCode:</string>
    <string name="submit">Submit</string>

    <string name="Open">open</string>
    <string name="Close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_5_of_movies">Top 5 of movies :</string>
    <string name="register">Register</string>
    <string name="email_address">email address</string>
    <string name="save_password">save password</string>
    <string name="login_in">Login in</string>
    <string name="title_activity_maps">Map</string>

</resources>
