<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLogin">
<!--    top-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
    </LinearLayout>

<!--    title-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/movie_memoir"
            android:background="@drawable/icon"
            />
        <TextView
            android:paddingLeft="@dimen/big"
            android:paddingTop="@dimen/xiaodahao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_memoir"
            android:layout_weight="40"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:orientation="vertical">

        <TextView
            android:padding="@dimen/big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_login_in"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/login_register"
            android:layout_marginRight="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:layout_gravity="right"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_marginLeft="@dimen/xiaodahao"
            android:layout_marginRight="@dimen/xiaodahao"
            android:layout_marginTop="@dimen/big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:textCursorDrawable="@drawable/cusor_color"
            android:background="@drawable/bg_username"
            android:drawablePadding="@dimen/little"
            android:drawableLeft="@drawable/user_icon"
            android:paddingLeft="@dimen/little"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/xiaodahao"
            android:layout_marginTop="@dimen/big"
            android:layout_marginRight="@dimen/xiaodahao"
            android:background="@drawable/bg_username"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:background="@null"
                android:drawableLeft="@drawable/key_icon"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/big"
                android:textColor="@color/colorBlack"
                android:textCursorDrawable="@drawable/cusor_color"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/login_eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big"
            android:layout_marginLeft="@dimen/chaodahao"
            android:layout_marginRight="@dimen/dahao">

            <CheckBox
                android:id="@+id/login_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_password"
                android:textSize="16sp" />
        </LinearLayout>
        <Button
            android:id="@+id/login_btn"
            android:layout_margin="@dimen/chaodahao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_in"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="@dimen/dahao"
            android:layout_marginRight="@dimen/dahao"
            android:layout_gravity="center"
            android:background="@drawable/bg_login"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"/>
    </LinearLayout>

</LinearLayout>