<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F2F2F2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">
<!--        Email    -->
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/email"
        android:textColor="#5B5B5B"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp" />

    <EditText
        android:id="@+id/re_email"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_re_et"
        android:textCursorDrawable="@drawable/cusor_color"
        />


<!--  Password  -->
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/password"
        android:textColor="#5B5B5B"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/bg_re_et"
            android:orientation="horizontal">
            
            <EditText
                android:id="@+id/re_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:textCursorDrawable="@drawable/cusor_color"
                android:background="@null"
                />

            <ImageView
                android:id="@+id/re_iv"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
               />

            
            
        </LinearLayout>

        <!--  firstname surname  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:text="@string/first_name"
                android:textColor="#5B5B5B"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/surname"
                android:textColor="#5B5B5B"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/re_firstname"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:inputType="text"
                android:background="@drawable/bg_re_et"
                android:textCursorDrawable="@drawable/cusor_color"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/re_surname"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:inputType="text"
                android:background="@drawable/bg_re_et"
                android:textCursorDrawable="@drawable/cusor_color"/>
        </LinearLayout>

<!--        Gender   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="gender: "
                android:textColor="#5B5B5B"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp" />

            <RadioGroup
                android:id="@+id/re_gender"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:checked="true"
                    android:text="male" />
                <RadioButton
                    android:id="@+id/gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="female" />
            </RadioGroup>
        </LinearLayout>

<!--        DOB-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/re_dob_text"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dob"
                android:layout_marginTop="5dp"
                android:textColor="#5B5B5B"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                />


            <EditText
                android:id="@+id/re_dob"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:textSize="14sp"
                android:layout_toRightOf="@+id/re_dob_text"
                android:text="2020-06-01"
                android:editable="false"
                android:background="@drawable/date"
                android:textColor="#a0a0a0"
                />

        </RelativeLayout>
<!--Address-->
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/address"
            android:textColor="#5B5B5B"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp" />

        <EditText
            android:id="@+id/re_address"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_re_et"
            android:textCursorDrawable="@drawable/cusor_color"
            />

        <!--  State Postcode  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:text="State"
                android:textColor="#5B5B5B"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/postcode"
                android:textColor="#5B5B5B"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4">
                <Spinner
                    android:id="@+id/re_spinner_state"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/state"
                    android:background="@drawable/bg_re_et"
                    />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/down"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"/>
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/re_postcode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:inputType="text"
                android:background="@drawable/bg_re_et"
                android:textCursorDrawable="@drawable/cusor_color"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/re_submit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:text="@string/submit"
                android:textSize="18sp"
                android:background="@drawable/re_submit"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                 />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result"
            />


    </LinearLayout>


</LinearLayout>